Create Another App For Login/Registrations called 'Accounts'

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,10 +74,8 @@
 		<div class="menu_content">
 			<ul>
 				<li><a href="inex.html">Home</a></li>
-				<li><a href="about.html">About us</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="news.html">News</a></li>
 				<li><a href="contact.html">Contact</a></li>
+				<li><a href="accounts/register">Register</a></li>
 			</ul>
 		</div>
 		<div class="menu_social">
